--- a/contact.html
+++ b/contact.html
@@ -241,7 +241,7 @@
                             MF
                         </div>
                         <h3 class="mentor-name">Dr. Muhammad Farrukh Shahid</h3>
-                        <p class="mentor-title">(CV, Gen AI, ML, and DL) Cofounder AgroTechVision and Healthcare Innovator</p>
+                        <p class="mentor-title">(PHD in AI, Gen AI, ML, and DL) Cofounder AgroTechVision and Healthcare Innovator</p>
                             <a href="mailto:kabdulsammad660@gmail.com">mfarrukh.shahid@nu.edu.pk</a>
                       
                         
